add batch inference role and new api routes
